<resources>
    <string name="app_name">ShoppingListTenzinChoezin</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="items_handler_interface_error">The activity does not implement the ItemsHandlerInterface</string>
    <string name="new_item">New item</string>
    <string name="edit_items">Edit items</string>
    <string name="ok">OK</string>
    <string name="empty_error">This field can not be empty</string>
    <string name="view_item_details">View Item Details</string>
    <string name="done">Done</string>
    <string name="click_here_new_item">Click here to create new items</string>
    <string name="purchased">Purchased</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="item_details">Item Details</string>
    <string name="view_item_name">Name:\n\n</string>
    <string name="view_item_price">Price:\n\n</string>
    <string name="view_item_detail">Details:\n\n</string>
    <string name="enter_item_name_here">Enter Item Name Here</string>
    <string name="item_type">Item Type:</string>
    <string name="enter_estimated_price">Enter Estimated Price</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="already_purchased">Already Purchased</string>
    <string name="shopping_list">Shopping List</string>
</resources>
