<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#84F106"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/questionmark"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tvItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/tvItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <CheckBox
                    android:id="@+id/cbEditPurchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchased"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnItemDetails"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/item_details"/>
        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>